--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2569,3 +2569,60 @@ ul.photo_select li input[type="file"] {
     font-size: 12px!important;
     word-break: keep-all;
 }
+.noviewpop .chkbox {
+    /* text-align: left; */
+    padding:15px 35px 0;
+    width:100%;
+}
+.noviewpop .chkbox label {
+    font-size: 12px;
+    color:#3bb9fa;
+    
+}
+.noviewpop .chkbox input[type="checkbox"] {
+     position: absolute;
+     width: 1px;
+     height: 1px;
+     padding: 0;
+     margin: -1px;
+     overflow: hidden;
+     border: 0;
+}
+.noviewpop .chkbox input[type="checkbox"] + label {
+     display: inline-block;
+     position: relative;
+     padding-left: 16px;
+     cursor: pointer;
+     -webkit-user-select: none;
+     -moz-user-select: none;
+     -ms-user-select: none;
+}
+.noviewpop .chkbox input[type="checkbox"] + label:before {
+     content: '';
+     position: absolute;
+     left: 0;
+     top: 4px;
+     width: 10px;
+     height: 10px;
+     text-align: center;
+     background: #fff;
+     border: 1px solid #3bb9fa;
+     border-radius: 100%;
+}
+.noviewpop .chkbox input[type="checkbox"]:checked + label:before {
+    background: #fff;
+    border-color: #fff;
+}
+.noviewpop .chkbox input[type="checkbox"]:checked + label:after {
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 0px;
+    width: 12px;
+    height: 12px;
+    background-image:url('../images/checked.png');
+    background-repeat: no-repeat;
+    background-size: 12px;
+    background-position: center;
+    border-radius: 100%;
+}
