--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1726,6 +1726,10 @@ header .head_back span {
 .stamp_success h3 {
     margin-bottom: 5px;
 }
+.stamp_success .tal {
+    display: inline-block;
+    text-align: left;
+}
 .giftDday {
     position: absolute;
     bottom: 0;
@@ -2570,8 +2574,8 @@ ul.photo_select li input[type="file"] {
     word-break: keep-all;
 }
 .noviewpop .chkbox {
-    /* text-align: left; */
-    padding:15px 35px 0;
+    text-align: left;
+    padding:15px 30px 0;
     width:100%;
 }
 .noviewpop .chkbox label {
