--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1040,6 +1040,15 @@ header .head_back span {
     line-height: 15px;
     margin-top: 3px;
 }
+.course_box ul.list li .box_rt p .star {
+    vertical-align: middle;
+    color: #cc705c;
+    font-size: 12px;
+}
+.course_box ul.list li .box_rt p .star img {
+    margin-left: 20px;
+    width: 12px;
+}
 .course_box ul.list li .box_rt .stamp_count {
     margin-top:5px;
 }
@@ -1861,6 +1870,16 @@ header .head_back span {
     text-overflow: ellipsis;
     white-space: nowrap;
     text-align: center;
+}
+.mystamp_wrap ul li .star,
+.laststamp_wrap ul li .star {
+    color: #c86550;
+    text-align: center;
+    font-size: 12px;
+}
+.mystamp_wrap ul li .star img,
+.laststamp_wrap ul li .star img {
+    width: 12px;
 }
 
 .mystamp_wrap .box {
@@ -3000,7 +3019,7 @@ ul.photo_select li input[type="file"] {
     color: #888;
     text-align: center;
 }
-.impression_full_height {
+.full_height {
     min-height: 100%;
     background-color: #f7f8f9;
 }
@@ -3100,13 +3119,12 @@ ul.photo_select li input[type="file"] {
     line-height: 1;
 }
 .impression .list .writer_info {
-    overflow: hidden;
+    display: flex;
     margin: 5px 0 12px;
     line-height: 1;
 }
 .impression .list .writer_info > li {
     position: relative;
-    float: left;
     font-size: 12px;
     color: #808080;
     padding: 0 7px;
@@ -3410,34 +3428,397 @@ ul.photo_select li input[type="file"] {
     color: #3bb9fa;
     line-height: 1;
 }
-.pop_star_rating ul {
+.star_rating {
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
     gap: 15px;
 }
-.pop_star_rating ul li {
+.star_rating li {
     width: 28px;
     height: 28px;
 }
-.pop_star_rating ul li input {
+.star_rating li input {
     display: none;
 }
-.pop_star_rating ul li input + label {
+.star_rating li input + label {
     display: block;
     width: 100%;
     height: 100%;
     background: url(../images/star_n.png) center / cover no-repeat;
 }
-/* .pop_star_rating ul li input:checked + label, */
-.pop_star_rating ul li input.on + label {
+.star_rating li input.on + label {
     background-image: url(../images/star_p.png);
 }
-/* @media screen and (max-width: 320px) {
-    .total_search .search_b {
-        padding: 15px 15px 0;
-    }
-    .total_search .search_card {
-        padding: 10px 10px 5px;
-    }
-} */
+/* 통합 포인트 */
+.total_point {
+    background-color: #f7f8f9;
+}
+.total_point .pt_available {
+    padding: 25px 25px 15px;
+}
+.total_point .pt_available .box {
+    padding: 0 16px 0 10px;
+    height: 62px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    border-radius: 4px;
+    
+}
+.total_point .pt_available .box h2 {
+    font-size: 12px;
+    color: #808080;
+    font-weight: normal;
+    font-family: 'inaviL';
+}
+.total_point .pt_available .box h2 + div {
+    display: flex;
+    align-items: center;
+}
+.total_point .pt_available .box div p {
+    color: #3bb9fa;
+    font-size: 20px;
+    font-family: 'arialRound';
+}
+.total_point .pt_available .box div p strong {
+    font-size: 30px;
+}
+.total_point .pt_available .box div button {
+    margin-left: 18px;
+    width: 18px;
+    height: 20px;
+    background: url(../images/point/icon_history.png) center / cover no-repeat;
+    font-size: 0;
+}
+.total_point .pt_mall {
+    padding: 0 20px 25px;
+}
+.total_point .pt_mall h2 {
+    margin-bottom: 15px;
+    padding-left: 25px;
+    height: 20px;
+    position: relative;
+    font-family: 'inaviM';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    
+}
+.total_point .pt_mall h2::before {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 14px;
+    height: 19px;
+    background: url(../images/point/icon_pointmall.png) center / cover no-repeat;
+    content: '';
+}
+.total_point .pt_mall ul {
+    overflow: hidden;
+    padding-bottom: 20px;
+}
+.total_point .pt_mall ul li {
+    float: left;
+    width: calc((100% - 22px)/3);
+    font-family: 'inaviL';
+    text-align: center;
+}
+
+.total_point .pt_mall ul li:nth-child(3n+2) {
+    margin: 0 11px;
+}
+.total_point .pt_mall ul li:nth-child(n+4) {
+    margin-top: 25px;
+}
+.total_point .pt_mall ul li .gift_img_wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    width: 100%;
+    background-color: #fff;
+}
+.total_point .pt_mall ul li .gift_img_wrap img {
+    width: 100%;
+}
+.total_point .pt_mall ul li strong {
+    margin: 12px 0 7px;
+    display: block;
+    font-size: 14px;
+    color: #010101;
+    line-height: 1;
+    font-weight: normal;
+}
+.total_point .pt_mall ul li em {
+    display: block;
+    font-size: 12px;
+    color: rgba(0,0,0,0.5);
+    font-style: normal;
+    line-height: 1;
+}
+.pt_mall .swiper-pagination-bullet {
+    background-color: #878788 !important;
+    opacity: 1;
+}
+.pt_mall .swiper-pagination-bullet-active {
+    background-color: #007aff !important;
+}
+.pt_use_guide {
+    position: relative;
+    padding: 21px 25px 70px;
+    font-family: 'inaviL';
+    background: #fff url('../images/icon_1.png') 28px 0 / 28px no-repeat;
+}
+.pt_use_guide::before {
+    position: absolute;
+    left: 25px;
+    top: 0;
+    display: block;
+    width: calc(100% - 25px);
+    height: 1px;
+    background-color: #000;
+    content: '';
+}
+.pt_use_guide h2 {
+    margin-bottom: 25px;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 1;
+
+}
+.pt_use_guide article strong {
+    margin: 20px 0 10px;
+    display: block;
+    font-family: 'inaviM';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1;
+
+}
+.pt_use_guide article p,
+.pt_use_guide article li {
+    font-size: 12px;
+    line-height: 18px;
+    word-break: keep-all;
+}
+.pt_use_guide article li {
+    text-indent: -8px;
+    margin-left: 8px;
+}
+.pt_use_guide article li::before {
+    margin-right: 6px;
+    content: '';
+    display: inline-block;
+    text-indent: 0;
+    width: 2px;
+    height: 2px;
+    background-color: #000;
+    vertical-align: middle;
+}
+.pop_point_agree .pop_cont .text_2 {
+    padding: 60px 0 0;
+}
+.pop_point_agree .pop_cont .text_2 strong {
+    display: block;
+    padding-bottom: 20px;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 25px;
+}
+.pop_point_agree .pop_cont .text_2 .check {
+    padding: 9px 30px
+}
+.pop_point_agree .pop_cont .text_2 .check input[type="checkbox"] {
+    width: 0;
+    height: 0;
+}
+.pop_point_agree .pop_cont .text_2 .check input[type="checkbox"] + label {
+    font-family: inaviM;
+}
+.pop_point_buy {}
+.pop_point_buy .pop_cont .text_2 {
+    padding: 60px 0 0 0;
+}
+.pop_point_buy .pop_cont .text_2 strong {
+    font-size: 17px;
+    font-weight: normal;
+    color: #c86550;
+}
+.pop_point_buy .pop_cont .text_2 .img_box {
+    margin: 15px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65px;
+    height: 65px;
+}
+.pop_point_buy .pop_cont .text_2 .img_box img {
+    width: 100%;
+}
+.pop_point_buy .pop_cont .text_2 p {
+    margin-bottom: 15px;
+    font-size: 14px;
+    line-height: 1.5;
+}
+.pop_point_buy .agree_pop {
+    display: flex;
+    align-items: center;
+    padding: 0 25px;
+    height: 40px;
+}
+.pop_point_buy .agree_pop .agree_info .tit {
+    margin-right: 15px;
+}
+.pop_point_buy .agree_pop .agree_info span {
+    display: inline-block;
+}
+.pop_point_lack strong {
+    display: block;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 1;
+}
+.pop_point_lack p {
+    margin: 27px 0 10px;
+    font-size: 14px;
+    line-height: 1;
+}
+.point_history {
+    padding-top: 203px;
+}
+.point_history .fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: #f7f8f9;
+}
+.pt_history_filter .history_top {
+    padding: 25px 25px 0;
+}
+.pt_history_filter select {
+    width: 100%;
+    height: 30px;
+    padding-left: 15px;
+    border: 1px solid #d0a287;
+    border-radius: 4px;
+    background: url(../images/sd_arrow.png) right 10px center / 10px no-repeat;
+    font-size: 12px;
+    color: #c86550;
+}
+.pt_history_filter p {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #010101;
+    line-height: 1;
+}
+.point_history .table {
+    margin-left: 25px;
+}
+.point_history .table_head {
+    margin-top: 30px;
+    border-bottom: 1px solid #000;
+}
+.point_history .table_body {
+    padding-bottom: 70px;
+}
+.point_history .table table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.point_history .table tbody tr {
+    border-bottom: 1px solid #edeeef;
+    text-align: center;
+}
+.point_history .table_head th {
+    padding: 10px 0;
+    line-height: 1;
+    font-size: 14px;
+}
+.point_history .table tr *:first-child {
+    width: 100px;
+}
+.point_history .table tr *:nth-child(n+2) {
+    width: calc((100% - 140px)/3);
+}   
+.point_history .table tr *:last-child {
+    padding-right: 15px;
+}
+.point_history .table_body tr {
+    height: 40px;
+}
+.point_history .table_body td {
+    font-size: 14px;
+    color: #c86550;
+}
+.stamp_finish {
+    font-family: inaviL;
+}
+.stamp_finish .layer_con {
+    padding: 35px 27px 25px;
+    text-align: center;
+}
+.stamp_finish .layer_con h2 {
+    font-size: 17px;
+    font-weight: normal;
+    color: #3bb9fa;
+    line-height: 1;
+}
+.stamp_finish .layer_con .img_wrap {
+    margin: 26px auto 12px;
+    padding: 13px;
+    width: 154px;
+    height: 154px;
+    background-color: #f7f8f9;
+    border-radius: 3px;
+}
+.stamp_finish .layer_con .img_wrap img {
+    width: 100%;
+}
+.stamp_finish .layer_con .get_info {
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 1.4;
+    color: #010101;
+}
+.stamp_finish .layer_con .star_rating {
+    margin-bottom: 13px;
+}
+.stamp_finish .layer_con .tip {
+    display: block;
+    font-size: 12px;
+    color: rgba(1, 1, 1, 0.5);
+    font-style: normal;
+    line-height: 1.4;
+}
+.app_layer {
+    position: relative;
+}
+.app_layer .btn_wrap {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    overflow: hidden;
+}
+.app_layer .btn_wrap button {
+    float: left;
+    width: 50%;
+    background-color: #c86550;
+    color: #fff;
+    font-size: 14px;
+    height: 45px;
+}
+.app_layer .btn_wrap button.type2 {
+    border-left: 1px solid #d29284;
+}
+.app_layer .close {
+    position: absolute;
+    right: 17px;
+    top: 17px;
+    width: 17px;
+    height: 17px;
+    background: url(../images/close_pop_b.png) center / cover no-repeat;
+}
