--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -886,7 +886,11 @@ header .head_back span {
     padding:6px 16px;
     border-radius: 50px;
     cursor: pointer;
-
+}
+@media screen and (max-width: 320px) {
+    .course_box .sort span {
+        padding:6px 10px;
+    }
 }
 .course_box .sort span.on {
     color:#c86550;
