--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -439,6 +439,7 @@ header .head_back span {
     color:#c86550;
     display: block;
     margin-bottom: 25px;
+    word-break: break-all;
 }
 .pop_overay .pop_cont .text_2 > span img {
     width:30px;
@@ -1232,7 +1233,7 @@ header .head_back span {
     font-size: 12px;
     color: #010101;
     line-height: 1.2;
-    word-break: keep-all;
+    /* word-break: keep-all; */
     width: calc(100% - 100px);
 }
 .tour_sub_wrap ul.gift_list li .gift_icon {
@@ -1979,6 +1980,8 @@ header .head_back span {
     height:60px;
     line-height: 60px;
     position: relative;
+    display: flex;
+    align-items: center;
 }
 .all_gift ul.tour_list > li > ul.all_list li .point {
     display: inline-block;
@@ -2012,6 +2015,8 @@ header .head_back span {
     font-family: inaviL;
     font-size: 12px;
     color: #010101;
+    width: calc(100% - 130px);
+    line-height: 1.2;
 }
 .all_gift ul.tour_list > li > ul.all_list li .gift_icon {
     padding:0 30px;
@@ -3441,3 +3446,8 @@ ul.photo_select li input[type="file"] {
         padding: 10px 10px 5px;
     }
 } */
+.limit_gift {
+    font-weight: normal;
+    display: inline-block;
+    margin-left: 5px;
+}
