--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3164,6 +3164,9 @@ ul.photo_select li input[type="file"] {
 .impression .list .writer_info > li:first-child {
     padding-left: 0;
 }
+.impression .list .writer_info > li:last-child {
+    white-space: nowrap;
+}
 .impression .list .writer_info > li:not(:last-child)::after {
     position: absolute;
     right: 0;
@@ -3181,12 +3184,16 @@ ul.photo_select li input[type="file"] {
     word-break: keep-all;
     line-height: 15px;
 }
-.impression .slide {
+.impression .slide_list {
     width: 90px;
     height: 65px;
     border-radius: 2px;
     overflow: hidden;
     background-color: #ddd;
+}
+.impression .slide_list div {
+    width: 100%;
+    height: 100%;
 }
 .impression .swiper {
     margin-top: 12px;
